--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <!DOCTYPE HTML>
-<HEAD> <TITLE>Cayden Mascarenhas</TITLE></HEAD>
-<BODY>ENGC05</BODY>
+
+<HTML>
+<HEAD> 
+<TITLE>
+Cayden Mascarenhas
+</TITLE>
+</HEAD>
+
+<BODY>
+<div type="title">
+ENGC05
+</div>
+</BODY>
