--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE HTML>
-
+<STYLE>
+  .title
+    {
+      background-color: #CF3434;
+      height: 100px;
+    }
+</STYLE>
 <HTML>
 <HEAD> 
 <TITLE>
