--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML>
 <STYLE>
+  h1 
+    {
+      text-align: center;
+    }
+  
   .title
     {
       background-color: #CF3434;
@@ -9,12 +14,14 @@
 <HTML>
 <HEAD> 
 <TITLE>
-Cayden Mascarenhas 1
+Cayden Mascarenhas
 </TITLE>
 </HEAD>
 
 <BODY>
 <div class="title">
+<h1>
 ENGC05
+</h1>
 </div>
 </BODY>
