--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   h1 
     {
       text-align: center;
+      line-height: 200px;
     }
   
   .title
     {
       background-color: #CF3434;
-      height: 100px;
+      height: 200px;
     }
 </STYLE>
 <HTML>
@@ -17,11 +18,10 @@
 Cayden Mascarenhas
 </TITLE>
 </HEAD>
-
 <BODY>
 <div class="title">
 <h1>
-ENGC05
+ENGC05 Portfolio
 </h1>
 </div>
 </BODY>
