--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@ Cayden Mascarenhas
 <BODY>
 <div class="title">
 <h1>
+Cayden Mascarenhas' webpage: 
 ENGC05 Portfolio
 </h1>
 </div>
+  <font size=14>
+  Please note this webpage is under construction. If you are here to view the scrollable version of "Phaethon and Icarus have been on my mind lately", please click <a> here </a>
+</font>
 </BODY>
+  </html>
