--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+=<!DOCTYPE HTML>
 <STYLE>
   h1 
     {
@@ -26,7 +26,7 @@ ENGC05 Portfolio
 </h1>
 </div>
   <font size=14>
-  Please note this webpage is under construction. If you are here to view the scrollable version of "Phaethon and Icarus have been on my mind lately", please click <a> here </a>
+  Please note this webpage is under construction. If you are here to view the scrollable version of "Phaethon and Icarus have been on my mind lately", please click <a href="caydenmascarenhas.github.io/poem.html"> here </a>
 </font>
 </BODY>
   </html>
