--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ENGC05 Portfolio
 </h1>
 </div>
   <font size=14>
-  Please note this webpage is under construction. If you are here to view the scrollable version of "Phaethon and Icarus have been on my mind lately", please click <a href="caydenmascarenhas.github.io/poem.html"> here </a>
+  Please note this webpage is under construction. If you are here to view the scrollable version of "Phaethon and Icarus have been on my mind lately", please click <a href="noscroll.html"> here </a>
 </font>
   debug two
 </BODY>
